// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBannerComponent should snap with 1 unread notification 1`] = `
<tm-notification-banner
  __ngContext__={[Function Number]}
  isShown={[Function Boolean]}
  notificationService={[Function NotificationService]}
  notificationTargetUser={[Function String]}
  notifications={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  url=""
>
  <div
    class="banner ng-trigger ng-trigger-collapseAnim alert alert-success ng-animating"
    id="notification-banner"
    style=""
  >
    <button
      aria-label="Close"
      class="btn-close"
      id="btn-close-notif"
      type="button"
    />
    <h5>
      valid title 1
    </h5>
    <div
      class="banner-text"
    >
      valid message 1
    </div>
    <div
      class="d-flex flex-row-reverse mt-3 me-2"
    >
      <button
        class="btn btn-success"
        id="btn-mark-as-read"
        type="button"
      >
         Mark as Read 
      </button>
    </div>
  </div>
</tm-notification-banner>
`;

exports[`NotificationBannerComponent should snap with multiple unread notifications 1`] = `
<tm-notification-banner
  __ngContext__={[Function Number]}
  isShown={[Function Boolean]}
  notificationService={[Function NotificationService]}
  notificationTargetUser={[Function String]}
  notifications={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  url=""
>
  <div
    class="banner ng-trigger ng-trigger-collapseAnim alert alert-success ng-animating"
    id="notification-banner"
    style=""
  >
    <button
      aria-label="Close"
      class="btn-close"
      id="btn-close-notif"
      type="button"
    />
    <h5>
      valid title 1
    </h5>
    <div
      class="banner-text"
    >
      valid message 1
    </div>
    <div
      class="d-flex flex-row-reverse mt-3 me-2"
    >
      <button
        class="btn btn-success"
        id="btn-mark-as-read"
        type="button"
      >
         Mark as Read 
      </button>
    </div>
  </div>
</tm-notification-banner>
`;

exports[`NotificationBannerComponent should snap with no unread notifications 1`] = `
<tm-notification-banner
  __ngContext__={[Function Number]}
  isShown={[Function Boolean]}
  notificationService={[Function NotificationService]}
  notificationTargetUser={[Function String]}
  notifications={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  url=""
>
</tm-notification-banner>
`;
